--- a/Portafolio 2.0/portafolio/aplicacion/templates/mantener_cliente.html
+++ b/Portafolio 2.0/portafolio/aplicacion/templates/mantener_cliente.html
@@ -13,6 +13,7 @@
             <div style="height:50px"></div>
             <p class="lead">
             <p>Todos los Clientes registrado en el sistema</p>
+            <p>Cantidad de Clientes: "{{ usercount }}"</p>
             <hr>
             <input class="form-control col-md-3 light-table-filter" data-table="order-table" type="text" placeholder="Buscador..">
             <br>
