--- a/Portafolio 2.0/portafolio/aplicacion/templates/mantener_departamento.html
+++ b/Portafolio 2.0/portafolio/aplicacion/templates/mantener_departamento.html
@@ -6,6 +6,7 @@
 <div class="listadoreserva">
     <div class="container">
         <h1>Departamento de Turismo Real</h1>
+        <p>Cantidad de Departamentos: "{{ departamentocount }}"</p>
         <br>
         <table class="table table-bordered order-table ">
           <thead>
