--- a/Portafolio 2.0/portafolio/aplicacion/templates/mantener_reserva.html
+++ b/Portafolio 2.0/portafolio/aplicacion/templates/mantener_reserva.html
@@ -13,6 +13,7 @@
         <div style="height:50px"></div>
         <p class="lead">
         <p>Aqui podra encontrar a todas tus reservas hechas a lo largo del tiempo</p>
+        <p>Cantidad de Reservas: "{{ reservacoun }}"</p>
         <hr>
         <input class="form-control col-md-3 light-table-filter" data-table="order-table" type="text" placeholder="Buscador..">
         <br>
@@ -57,7 +58,6 @@
       <br> <br> 
       </div>
     {% endif %}
-
    <br>  
    <div class="reserva-arriendo">
     <div class="contenedor">
