--- a/Portafolio 2.0/portafolio/aplicacion/templates/mantener_servicio.html
+++ b/Portafolio 2.0/portafolio/aplicacion/templates/mantener_servicio.html
@@ -13,6 +13,7 @@
         <div style="height:50px"></div>
         <p class="lead">
         <p>Aqui podra encontrar a todas tus reservas hechas a lo largo del tiempo</p>
+        <p>Cantidad de Servicios Contratados: "{{ serviciosextras }}"</p>
         <hr>
         <input class="form-control col-md-3 light-table-filter" data-table="order-table" type="text" placeholder="Buscador..">
         <br>
