--- a/Portafolio 2.0/portafolio/aplicacion/templates/inicio.html
+++ b/Portafolio 2.0/portafolio/aplicacion/templates/inicio.html
@@ -65,28 +65,28 @@
   </div>
   <div class="inicio-adm-opciones">
        <div class="inicio-adm-opciones-botones1">
-         <a href="/mantener_cliente">Mantener Clientes</a> 
+         <a href="/mantener_cliente"><i class="fas fa-users"></i> Mantener Clientes</a> 
        </div>
        <div class="inicio-adm-opciones-botones2">
-         <a href="/mantener_departamento">Mantener Departamento</a> 
+         <a href="/mantener_departamento"><i class="fas fa-building"></i> Mantener Departamento</a> 
        </div>
        <div class="inicio-adm-opciones-botones7">
-        <a href="/mantener_reserva">Mantener Reserva</a> 
+        <a href="/mantener_reserva"><i class="fas fa-bed"></i> Mantener Reserva</a> 
        </div>
        <div class="inicio-adm-opciones-botones4">
-       <a href="/mantener_servicio">Mantener Servicios Basicos</a> 
+       <a href="/mantener_servicio"><i class="fas fa-hands-helping"></i> Mantener Servicios Basicos</a> 
        </div>
        <div class="inicio-adm-opciones-botones3">
-          <a href="/pagos_adm">Pagos</a> 
+          <a href="/pagos_adm"><i class="fas fa-cash-register"></i> Pagos</a> 
        </div>
        <div class="inicio-adm-opciones-botones5">
-          <a href="/generar_estadistica">Generar Estadistica</a> 
+          <a href="/generar_estadistica"><i class="fas fa-chart-bar"></i> Generar Estadistica</a> 
        </div>
        <div class="inicio-adm-opciones-botones6">
-          <a href="/generar_informe">Generar Informe</a> 
+          <a href="/generar_informe"><i class="fas fa-file-alt"></i> Generar Informe</a> 
        </div>
         <div class="inicio-adm-opciones-botones8">
-           <a href="/perfiladministrador">Ver mi Perfil</a> 
+           <a href="/perfiladministrador"><i class="fas fa-house-user"></i> Ver mi Perfil</a> 
         </div>
   </div>
 </div>
