--- a/Portafolio 2.0/portafolio/aplicacion/templates/inicio.html
+++ b/Portafolio 2.0/portafolio/aplicacion/templates/inicio.html
@@ -61,7 +61,7 @@
 
 <div class="inicio-adm">
   <div class="inicio-adm-titulo">
-      <h1>Elegir tarea a realizar</h1>
+      <h1><i class="fas fa-align-justify"></i> Elegir tarea a realizar</h1>
   </div>
   <div class="inicio-adm-opciones">
        <div class="inicio-adm-opciones-botones1">
