--- a/Portafolio 2.0/portafolio/aplicacion/templates/mantener_reserva.html
+++ b/Portafolio 2.0/portafolio/aplicacion/templates/mantener_reserva.html
@@ -60,7 +60,7 @@
     {% endif %}
     <!-- Filtrado de ultimo registro-->
     <div class="ultimo-post">
-    <h1>La ulitma reserva añadida</h1>
+    <h1>La ultima reserva añadida</h1>
     <p> <i class="fas fa-plus-circle"></i>
       El codigo de Reserva es "{{ reservaultima.Codigo_Reserva }}", cliente que lo ha solicitado "{{ reservaultima.user }}"</p>
     </div>
