listo detalles del cliente

--- a/Portafolio 2.0/portafolio/aplicacion/static/css/reserva.css
+++ b/Portafolio 2.0/portafolio/aplicacion/static/css/reserva.css
@@ -80,14 +80,14 @@ padding: 5px;
     border-radius: 3px;
 }
 
-.contenedor .form .form-label{
+.contenedor .form label{
     display: block;
-    color: #ff851b;
+    color: #ffffff;
     font-size: 16px;
     position: relative;
 }
 
-.contenedor .form .form-input{
+.contenedor .form input{
     background: rgba(0,0,0,.7);
     border: none;
     outline: none;
