--- a/Portafolio 2.0/portafolio/aplicacion/templates/base_generic.html
+++ b/Portafolio 2.0/portafolio/aplicacion/templates/base_generic.html
@@ -15,6 +15,12 @@
   <link href="{% static 'css/cliente.css' %}" rel="stylesheet">
   <link href="{% static 'css/Nav.css' %}" rel="stylesheet">
   <link href="{% static 'css/testimonio.css' %}" rel="stylesheet">
+  <link href="{% static 'css/reserva.css' %}" rel="stylesheet">
+  <link href="{% static 'css/contacto.css' %}" rel="stylesheet">
+  <link href="{% static 'css/galeria-cliente.css' %}" rel="stylesheet">
+  <link href="{% static 'css/carrusel.css' %}" rel="stylesheet">
+  <link href="{% static 'css/administrador.css' %}" rel="stylesheet">
+
   <link rel="stylesheet" href="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.css" integrity="sha512-QAY8RpaU+5mx/feUcMx9GlZda/DWr2b7MFnFAPuLKSsVOnBOSGMHZDv4e1HbeLrjGFlhaFYIC29vKGCpOjQryw==" crossorigin="anonymous" />
 </head>
@@ -78,6 +84,64 @@
       </div>
     </div>
   </div>
+
+  <script languaje="javascript">
+    function habilita(form)
+    {
+    form.intereses[0].disabled = false;
+    form.intereses[1].disabled = false;
+    form.intereses[2].disabled = false;
+    }  
+    function deshabilita(form)
+    {
+    form.intereses[0].disabled = true;
+    form.intereses[1].disabled = true;
+    form.intereses[2].disabled = true;
+    }
+</script>
+<script languaje="javascript">
+    function verificarCasilla(form)
+    {
+        if (form.acepto.checked == false)
+        {
+        alert("Debes aceptar los términos del contrato antes de continuar");
+        form.acepto.focus(); return true;
+        }
+    form.submit()
+    }
+</script>
+<script language="javascript">
+    function agregarOpciones(form)
+    {
+    var selec = form.tipos.options;
+    var combo = form.estilo.options;
+    combo.length = null;
+        if (selec[0].selected == true)
+        {
+        var seleccionar = new Option("<-- esperando selección","","","");
+        combo[0] = seleccionar;
+        }
+        if (selec[1].selected == true)
+        {
+        var popular1 = new Option("Banco Estado","","","");
+        combo[0] = popular1;
+        }
+        if (selec[2].selected == true)
+        {
+        var academica1 = new Option("Banco Estado","","");
+        var academica2 = new Option("Banco Falabella","","","");
+        var academica3 = new Option("Banco Ripley","","","");
+        var academica4 = new Option("Banco Santander","","","");
+        var academica5 = new Option("Banco Chile","","","");
+        combo[0] = academica1;
+        combo[1] = academica2;
+        combo[2] = academica3;
+        combo[3] = academica4;
+        combo[4] = academica5;
+        }
+    }
+    </script>
+
   {% block content %}
     
     
