--- a/Portafolio 2.0/portafolio/aplicacion/templates/register.html
+++ b/Portafolio 2.0/portafolio/aplicacion/templates/register.html
@@ -2,87 +2,43 @@
 {% load static %}
 
 {% block content %}
-<form method="POST">
- </form>
 <br>  
-<div class="row">
-  <div class="col-sm-6 col-sm-offset-3">
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <h3 class="panel-title">
-            Registro Cliente
-          </h3>
-      </div>
-      <div class="panel-body">
-        <form method="POST" accept-charset="UTF-8" role="form" enctype="multipart/form-data">
-          <fieldset>
-            <div class="form-group">
-              <div class="input-group input-group-lg">
-                <span class="input-group-addon"><i class="fas fa-user"></i></span>
-                <input type="text" class="form-control" name="cli_Rut" placeholder="Rut">
-              </div>
-            </div>
-            <div class="form-group">
-              <div class="input-group input-group-lg">
-                <span class="input-group-addon"><i class="fas fa-user"></i></span>
-                <input type="text" class="form-control" name="cli_Nombre" placeholder="Nombre">
-              </div>
-            </div>
-            <div class="form-group">
-              <div class="input-group input-group-lg">
-                <span class="input-group-addon"><i class="fas fa-user"></i></span>
-                <input type="text" class="form-control" name="cli_Apellidos" placeholder="Apellidos">
-              </div>
-            </div>
-            <div class="form-group">
-              <div class="input-group input-group-lg">
-                <span class="input-group-addon"><i class="fas fa-user"></i></span>
-                <input type="number" class="form-control" name="cli_Edad" placeholder="Edad">
-              </div>
-            </div>
-            <div class="form-group">
-              <div class="input-group input-group-lg">
-                <span class="input-group-addon"><i class="fas fa-user"></i></span>
-                <input type="text" class="form-control" name="cli_Nacionalidad" placeholder="Nacionalidad">
-              </div>
-            </div>
-            <div class="form-group">
-              <div class="input-group input-group-lg">
-                <span class="input-group-addon"><i class="fas fa-user"></i></span>
-                <input type="text" class="form-control" name="email" placeholder="Correo Electronico">
-              </div>
-            </div>
-            <div class="form-group">
-              <div class="input-group input-group-lg">
-                <span class="input-group-addon"><i class="fas fa-user"></i></span>
-                <input type="text" class="form-control" name="cli_Telefono" placeholder="Telefono">
-              </div>
-            </div>
-            <div class="form-group">
-              <div class="input-group input-group-lg">
-                <span class="input-group-addon"><i class="fas fa-user"></i></span>
-                <input type="text" class="form-control" name="username" placeholder="Nombre de Usuario">
-              </div>
-            </div>
-            <div class="form-group">
-              <div class="input-group input-group-lg">
-                <span class="input-group-addon"><i class="fa fa-fw fa-lock"></i></span>
-                <input type="password" class="form-control" name="password1" placeholder="Contraseña">
-              </div>
-            </div>
-            <div class="form-group">
-              <div class="input-group input-group-lg">
-                <span class="input-group-addon"><i class="fa fa-fw fa-lock"></i></span>
-                <input type="password" class="form-control" name="password2" placeholder="Repita Contraseña">
-              </div>
-            </div>
+<div class="reserva-arriendo">
+ <div class="contenedor">
+     <form action="" class="form" method="POST">
+     <div class="form-header">
+         <h1 class="form-title"><i class="fas fa-plus-circle"></i>Registro <span> Cliente </span></h1>
+     </div> 
+     <div class="texto-reserva">
+         <p>Registro de Cliente
+         </p>
+     </div>
+           <label>Rut</label><br>
+           {{ form.cli_Rut }}<br><br>
+           <label>Nombre/s</label><br>
+           {{ form.cli_Nombre }}<br><br> 
+           <label>Apellido/s</label><br>
+           {{ form.cli_Apellidos }}<br><br> 
+           <label>Edad</label><br>
+           {{ form.cli_Edad }}<br><br> 
+           <label>Nacionalidad</label><br>
+           {{ form.cli_Nacionalidad }}<br><br> 
+           <label>Correo Electronico</label><br>   
+           {{ form.email }}<br><br> 
+           <label>Telefono</label><br>
+           {{ form.cli_Telefono }}<br><br> 
+           <label>Nombre Usuario</label><br>
+           {{ form.username }}<br><br> 
+           <label>Contraseña</label><br>   
+           {{ form.password1 }}<br><br>      
+           <label>Repetir Contraseña</label><br>   
+           {{ form.password2 }}<br><br>          
+              <br><br>
               {% csrf_token %}
-            <input class="btn btn-lg btn-primary btn-block" type="submit" value="Registrar">
-          </fieldset>
-        </form>
-        <p class="m-b-0 m-t">¿Ya estas registrado? <a href="/login">Haga Click Aqui</a>.</p>
+              <input class="btn btn-lg btn-primary btn-block" type="submit" value="Registrar">
+              <input class="btn btn-lg btn-primary btn-block" type="reset" value="Limpiar Formulario"><br> 
+              <p class="m-b-0 m-t">¿Ya estas registrado? <a href="/login">Haga Click Aqui</a>.</p>
+            </form>
+          </div>
       </div>
-    </div>
-  </div>
-</div>
 {% endblock %}
