--- a/Portafolio 2.0/portafolio/aplicacion/templates/registration/login.html
+++ b/Portafolio 2.0/portafolio/aplicacion/templates/registration/login.html
@@ -2,59 +2,29 @@
 {% load static %}
 
 {% block content %}
-<div id="background-wrapper" class="benches" data-stellar-background-ratio="0.8">
-  <div id="content">
-    <div class="header">
-      <div class="header-inner">
-        <a class="navbar-brand center-block" href="" title="Home">
-          <h1 class="hidden">
-              <img src="img/logo.png" alt="Turismo Real">
-            </h1>
-        </a>
+
+<div class="reserva-arriendo">
+  <div class="contenedor">
+      <form action="" class="form" method="POST">
+      <div class="form-header">
+          <h1 class="form-title"><i class="fas fa-plus-circle"></i>Login <span> Cliente </span></h1>
+      </div> 
+      <div class="texto-reserva">
+          <p>Ingrese su cuenta.
+          </p>
       </div>
-    </div>
-    <div class="row">
-      <div class="col-sm-6 col-sm-offset-3">
-        <div class="panel panel-default">
-          <div class="panel-heading">
-            <h3 class="panel-title">
-                Login
-              </h3>
-          </div>
-          <div class="panel-body">
-            <form  method="POST" enctype="multipart/form-data">
-              <fieldset>
-                <div class="form-group">
-                  <div class="input-group input-group-lg">
-                    <span class="input-group-addon"><i class="fas fa-user"></i></span>
-                    <input type="text" class="form-control" name="username">
-                  </div>
-                </div>
-                <div class="form-group">
-                  <div class="input-group input-group-lg">
-                    <span class="input-group-addon"><i class="fa fa-fw fa-lock"></i></span>
-                    <input type="password" class="form-control" name="password">
-                  </div>
-                </div>
-                <div class="checkbox">
-                  <label>
-                      <input name="remember" type="checkbox" value="Remember Me">
-                      Recordarme
-                    </label>
-                    <p class="m-b-0 m-t">¿Desea registrarse? <a href="/register">Haga Click Aqui</a></p> 
-                </div>
-                {% csrf_token %}
-                <input class="btn btn-lg btn-primary btn-block" type="submit" value="Login">
-              </fieldset>
-              <br>
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- /row -->
-  </div>
-</div>
+            <label>Nombre de Cliente</label><br>
+            <input type="text" name="username" placeholder="Nombre Usuario">
+            <label>Contraseña</label><br>
+            <input type="password" name="password" placeholder="Contraseña">
+            <br><br>
+               {% csrf_token %}
+               <input class="btn btn-lg btn-primary btn-block" type="submit" value="Ingresar">
+               <p class="m-b-0 m-t">¿Desea registrarse? <a href="/register">Haga Click Aqui</a></p> 
+             </form>
+           </div>
+       </div>
+ 
 
 
 {% endblock %}
