--- a/Portafolio 2.0/portafolio/aplicacion/templates/update.html
+++ b/Portafolio 2.0/portafolio/aplicacion/templates/update.html
@@ -3,51 +3,24 @@
 
 
 {% block content %}
-<div id="background-wrapper" class="benches" data-stellar-background-ratio="0.8">
-    <div id="content">
-      <div class="header">
-        <div class="header-inner">
-          <a class="navbar-brand center-block" href="" title="Home">
-            <h1 class="hidden">
-                <img src="img/logo.png" alt="Turismo Real">
-              </h1>
-          </a>
+  <div class="reserva-arriendo">
+    <div class="contenedor">
+        <form action="" class="form" method="POST">
+        <div class="form-header">
+            <h1 class="form-title"><i class="fas fa-plus-circle"></i>Cambiar <span> Contraseña </span></h1>
+        </div> 
+        <div class="texto-reserva">
+            <p>Actualizacion de contraseña de: {{ user.username }}.
+            </p>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-6 col-sm-offset-3">
-          <div class="panel panel-default">
-            <div class="panel-heading">
-              <h3 class="panel-title">
-                cambiar contraseña de: {{ user.username }}
-                </h3>
-            </div>
-            <div class="panel-body">
-              <form  method="POST">
-                <fieldset>
-                  <div class="form-group">
-                    <div class="input-group input-group-lg">
-                      <span class="input-group-addon"><i class="fa fa-fw fa-lock"></i></span>
-                      <input type="password" class="form-control" name="password1" placeholder="contraseña actual">
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <div class="input-group input-group-lg">
-                      <span class="input-group-addon"><i class="fa fa-fw fa-lock"></i></span>
-                      <input type="password" class="form-control" name="password2" placeholder="nueva contraseña">
-                    </div>
-                  </div>
-
-                  {% csrf_token %}
-                  <input class="btn btn-lg btn-primary btn-block" type="submit" value="Actualizar Contraseña">
-                </fieldset>
-                <br>
-              </form>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- /row -->
-    </div>
-  </div>
+              <label>Contrasñea Actual</label><br>
+              <input type="password" class="form-control" name="password1" placeholder="contraseña actual">
+              <label>Nueva Contraseña</label><br>
+              <input type="password" class="form-control" name="password2" placeholder="nueva contraseña">
+              <br><br>
+                 {% csrf_token %}
+                 <input class="btn btn-lg btn-primary btn-block" type="submit" value="Actualizar Contraseña">
+                </form>
+             </div>
+         </div>
 {% endblock %}
