--- a/Portafolio 2.0/portafolio/aplicacion/templates/verification.html
+++ b/Portafolio 2.0/portafolio/aplicacion/templates/verification.html
@@ -2,45 +2,24 @@
 {% load static %}
 
 {% block content %}
-<div id="background-wrapper" class="benches" data-stellar-background-ratio="0.8">
-    <div id="content">
-      <div class="header">
-        <div class="header-inner">
-          <a class="navbar-brand center-block" href="" title="Home">
-            <h1 class="hidden">
-                <img src="img/logo.png" alt="Turismo Real">
-              </h1>
-          </a>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-6 col-sm-offset-3">
-          <div class="panel panel-default">
-            <div class="panel-heading">
-              <h3 class="panel-title">
-                  Verificacion de email
-                </h3>
-            </div>
-            <div class="panel-body">
-              <form  method="POST">
-                <fieldset>
-                  <div class="form-group">
-                    <div class="input-group input-group-lg">
-                      <span class="input-group-addon"><i class="fas fa-user"></i></span>
-                      <input type="text" class="form-control" name="codregistro" placeholder="ingrese codigo enviado a su mail">
-                    </div>
-                  </div>
-                  {% csrf_token %}
-                  <input class="btn btn-lg btn-primary btn-block" type="submit" value="Login">
-                </fieldset>
-                <br>
-              </form>
-            </div>
+
+<div class="reserva-arriendo">
+ <div class="contenedor">
+     <form action="" class="form" method="POST">
+     <div class="form-header">
+         <h1 class="form-title"><i class="fas fa-plus-circle"></i>Verificar <span> Cuenta </span></h1>
+     </div> 
+     <div class="texto-reserva">
+         <p>Ingrese el codigo para verificar su son verificos sus datos, estos fueron enviados a su correo electronico.
+         </p>
+     </div>
+           <label>Ingrese codigo</label><br>
+           <input type="text" name="codregistro" placeholder="ingrese codigo enviado a su mail">
+           <br><br>
+              {% csrf_token %}
+              <input class="btn btn-lg btn-primary btn-block" type="submit" value="Login">
+            </form>
           </div>
-        </div>
       </div>
-      <!-- /row -->
-    </div>
-  </div>
 
 {% endblock %}
