--- a/Portafolio 2.0/portafolio/aplicacion/templates/registration/login.html
+++ b/Portafolio 2.0/portafolio/aplicacion/templates/registration/login.html
@@ -7,7 +7,7 @@
   <div class="contenedor">
       <form action="" class="form" method="POST">
       <div class="form-header">
-          <h1 class="form-title"><i class="fas fa-plus-circle"></i>Login <span> Cliente </span></h1>
+          <h1 class="form-title"><i class="fas fa-user-lock"></i> Login <span> Cliente </span></h1>
       </div> 
       <div class="texto-reserva">
           <p>Ingrese su cuenta.
