--- a/Portafolio 2.0/portafolio/aplicacion/templates/deleteinventario.html
+++ b/Portafolio 2.0/portafolio/aplicacion/templates/deleteinventario.html
@@ -3,27 +3,17 @@
 
 
 {% block content %}
-
-<form method="POST">
-</form>
-<br>  
-<div class="row">
- <div class="col-sm-6 col-sm-offset-3">
-   <div class="panel panel-default">
-     <div class="panel-heading">
-       <h3 class="panel-title">
-           Eliminar Inventario
-         </h3>
-     </div>
-     <div class="panel-body">
-       <form method="POST" accept-charset="UTF-8" role="form" >
-             {% csrf_token %}
-             <p>confirme que desea eliminar</p>
-           <input class="btn btn-lg btn-primary btn-block" type="submit" value="Eliminar">
-         </fieldset>
-       </form>
-     </div>
-   </div>
- </div>
-</div>
-{% endblock %}
+<div class="reserva-arriendo">
+  <div class="contenedor">
+      <form action="" class="form" method="POST">
+      <div class="form-header">
+          <h1 class="form-title"><i class="fas fa-plus-circle"></i>Eliminar <span> Inventario </span></h1>
+      </div> 
+      <br><br><br><br>
+      {% csrf_token %}
+      <p>confirme que desea eliminar inventario</p>
+      <br><br><br>
+      <input class="btn btn-lg btn-primary btn-block" type="submit" value="Eliminar">
+      </form>
+  </div>
+</div>k %}
