--- a/Portafolio 2.0/portafolio/aplicacion/templates/actualizaruser.html
+++ b/Portafolio 2.0/portafolio/aplicacion/templates/actualizaruser.html
@@ -5,47 +5,43 @@
 
 
 {% block content %}
-<br>  
-<div class="row">
-  <div class="col-sm-6 col-sm-offset-3">
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <h3 class="panel-title">
-            Actualizar Cliente
-          </h3>
-      </div>
-      <div class="panel-body">
-        <form method="POST" accept-charset="UTF-8" role="form" >
-          <fieldset>
-            <div class="escritura">
-                <label>Rut</label>
-                <div class="escrituraline">{{ form.cli_Rut }}</div><br>
-                <label>Nombre</label>
-                <div class="escrituraline">{{ form.cli_Nombre}}</div><br>
-                <label>Apellidos</label>
-                <div class="escrituraline">{{ form.cli_Apellidos}}</div><br>
-                <label>Edad</label>
-                <div class="escrituraline">{{ form.cli_Edad}}</div><br>
-                <label>Nacionalidad</label>
-                <div class="escrituraline">{{ form.cli_Nacionalidad}}</div><br>
-                <label>Email</label>
-                <div class="escrituraline">{{ form.email}}</div><br>
-                <label>Telefono</label>
-                <div class="escrituraline">{{ form.cli_Telefono}}</div><br>
-                <label>Nombre de Usuario</label>
-                <div class="escrituraline">{{ form.username}}</div><br>
-                <label>Activar/Desactivar Usuario</label>
-                <div class="escrituraline">{{ form.is_active}}</div><br>
-                <label>Activar/Desactivar MODO: Funcionario</label>
-                <div class="escrituraline">{{ form.funcionario}}</div><br>
-                {% csrf_token %}
-              </div>
-            <input class="btn btn-lg btn-primary btn-block" type="submit" value="Editar">
-          </fieldset>
-        </form>
-      </div>
-    </div>
+<div class="reserva-arriendo">
+ <div class="contenedor">
+     <form action="" class="form" method="POST">
+     <div class="form-header">
+         <h1 class="form-title"><i class="fas fa-plus-circle"></i>Actualizar <span> Cliente </span></h1>
+     </div> 
+     <div class="texto-reserva">
+         <p>Actualizar de Cliente
+         </p>
+     </div>
+           <label>Rut</label><br>
+           {{ form.cli_Rut }}<br><br>
+           <label>Nombre/s</label><br>
+           {{ form.cli_Nombre }}<br><br> 
+           <label>Apellido/s</label><br>
+           {{ form.cli_Apellidos }}<br><br> 
+           <label>Edad</label><br>
+           {{ form.cli_Edad }}<br><br> 
+           <label>Nacionalidad</label><br>
+           {{ form.cli_Nacionalidad }}<br><br> 
+           <label>Correo Electronico</label><br>   
+           {{ form.email }}<br><br> 
+           <label>Telefono</label><br>
+           {{ form.cli_Telefono }}<br><br> 
+           <label>Nombre Usuario</label><br>
+           {{ form.username }}<br><br> 
+           <label>Activar/Desactivar Usuario</label>
+           {{ form.is_active}}<br><br>  
+           <label>Activar/Desactivar MODO: Funcionario</label>
+           {{ form.funcionario}}<br><br>  
+
+              <br><br>
+              {% csrf_token %}
+              <input class="btn btn-lg btn-primary btn-block" type="submit" value="Actualizar">
+              <input class="btn btn-lg btn-primary btn-block" type="reset" value="Limpiar Formulario"><br> 
+              <p class="m-b-0 m-t">¿Deseas volver al menu? <a href="/inicio">Haga Click Aqui</a>.</p>
+      </form>
   </div>
 </div>
-
 {% endblock %}
