--- a/Portafolio 2.0/portafolio/aplicacion/templates/deleteinventario.html
+++ b/Portafolio 2.0/portafolio/aplicacion/templates/deleteinventario.html
@@ -16,4 +16,5 @@
       <input class="btn btn-lg btn-primary btn-block" type="submit" value="Eliminar">
       </form>
   </div>
-</div>k %}
+</div>
+{% endblock %}
